# chimera-autonomous-influencers

./: .coderabbit.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  REPORT.md  REPORT_CHIMERA.md  SOUL.md  all.md  notebooklm_dump.md  pyproject.toml  requirements.txt
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  summary.md  tooling_strategy.md
scripts/: verify_specs.py
skills/: README.md  skill_download_youtube.py  skill_transcribe_audio.py  skill_trend_analyzer.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/: perception.py
tests/: test_skills_interface.py  test_trend_fetcher.py
